# manga-tui

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
data_test/mangapill/: chapter-page.txt  chapter_page_special.txt  home_page.txt  manga_page.txt  search_page.txt  search_page_not_found.txt
src/: backend.rs  cli.rs  common.rs  config.rs  global.rs  lib.rs  main.rs  utils.rs
src/backend/: database.rs  html_parser.rs  manga_provider.rs  migration.rs  tracker.rs  tui.rs
src/backend/html_parser/: scraper.rs
src/backend/manga_provider/: filters.rs  local.rs  mangadex.rs  mangapill.rs  weebcentral.rs
src/backend/manga_provider/mangadex/: api_responses.rs
src/backend/manga_provider/mangadex/filters/: filter_provider.rs
src/backend/manga_provider/mangapill/: filter_state.rs  filter_widget.rs  response.rs
src/backend/manga_provider/weebcentral/: response.rs
src/view/: app.rs  pages.rs  widgets.rs
src/view/pages/: feed.rs  home.rs  manga.rs  reader.rs  search.rs  stats.rs
src/view/tasks/: manga.rs
src/view/widgets/: feed.rs  home.rs  manga.rs  reader.rs  search.rs
