[package]
name = "manga-tui"
version = "0.10.0"
edition = "2024"
authors = ["Josue <josuebarretogit@gmail.com>"]
readme = "README.md"
description = "Terminal-based manga reader and downloader with image rendering support"
keywords = ["cli", "command-line", "terminal", "tui" ]
categories = ["command-line-interface"]
license = "MIT"
exclude = [
  "public/*",
  "docs/*",
  "data_test/*"
]

[dependencies]
# ratatui related dependencies
ratatui = { version = "0.30.2", features = ["all-widgets", "palette", "unstable-widget-ref"] }
ratatui-image = { version = "11.0.6", features = ["crossterm", "image-defaults"], default-features = false }
throbber-widgets-tui = "0.11.1"
tui-input = { version = "0.15.3", features = ["crossterm"], default-features = false }
tui-widget-list = "0.15.2"

crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
image = "0.25.8"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26"
color-eyre = "0.6.5"
futures = "0.3.31"
bytes = { version = "1", features = ["serde"] }
url = { version = "2.5.7", features = ["serde"] }
serde_json = "1.0.145"
once_cell = "1.21.1"
chrono = { version= "0.4.42", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
clap = { version = "4.5.49", features = ["derive", "cargo"] }
zip = "4.6.1"
toml = "0.9.6"
epub-builder = "0.8.0"
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = "0.5" 
regex = "1.12.2"
lopdf = "0.38.0"
flate2 = "1.1.4"
rand = "0.9.2"
time = "=0.3.51"
rars = "0.3.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
rusty-hook = "0.11.2"
fake = "4.4.0"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "utils"
harness = false

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_HiDpi"]}

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "debuginfo"

[features]
local_only = []
